# FFT-Pesce-Miotti-Allahakbari

./: .gitignore  CMakeLists.txt  Doxyfile  Notes.md  README.md  report-notes.md
img/: compressed-image.data
include/: BitReversalPermutation.hpp  BitReversePermuation.hpp  BitReversePermutation.hpp  FFTGPU.hpp  FourierTransform.hpp  FourierTransformCalculator.hpp  FourierTransformGPU.hpp  GrayscaleImage.hpp  InverseFourierTransform.hpp  Real.hpp  Utility.hpp  VectorExporter.hpp  WaveletTransform.hpp  compression_main.hpp  cuda_main.hpp  fft_main.hpp  jpeg_main.hpp  wavelet_main.hpp
report/: bibliography.bib  main.tex
report/sections/: code.tex  compression.tex  cuda.tex  fft.tex  intro.tex  wavelet.tex
results/: scaling_francesco_double.csv  scaling_francesco_double_1000tests.csv  scaling_francesco_float.csv  scaling_francesco_float_1000tests.csv  times_francesco_double_18.csv  times_francesco_double_18size_1000tests_us.csv  times_francesco_float_19.csv  times_francesco_float_19size_1000tests_us.csv
src/: BitReversalPermutation.cpp  BitReversePermutation.cpp  FFTGPU.cu  FourierTransform.cpp  FourierTransform.hpp  FourierTransformCalculator.cpp  GrayscaleImage.cpp  InverseFourierTransform.cpp  LegacyWaveletTransform.cpp  Makefile  Utility.cpp  VectorExporter.cpp  WaveletTransform.cpp  compression_main.cpp  cuda_main.cpp  fft_main.cpp  jpeg_main.cpp  main.cpp  wavelet_main.cpp
tools/: compare-methods.py  compute-performance.py  compute-scaling.py  find-error.py  padding-implications.py  visualize-fft.py  visualize-performance.py  visualize-scaling.py
